# seedcat

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  benchmarks.txt
.github/workflows/: rust.yml
dicts/: 100k_cap.txt  100k_upper.txt  10k_cap.txt  10k_upper.txt  1k.txt  1k_cap.txt  1k_upper.txt  test.txt  test_cap.txt  test_upper.txt
docs/: benchmarks_3090.txt  benchmarks_8x4090.txt  design.md  recovery.md  renting.md
scripts/: configure_hashcat.sh  release.sh  test_hashcat.sh  upload.sh  vast2.sh
src/: address.rs  benchmarks.rs  combination.rs  hashcat.rs  logger.rs  main.rs  passphrase.rs  permutations.rs  seed.rs  tests.rs
