[package]
name = "seedcat"
version = "0.0.2"
edition = "2021"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
anyhow = "1.0"
bitcoin = "0.31"
tokio = { version = "1.33.0", features = ["full"] }
crossterm = "0.27.0"
gzp = {version = "0.11.3", default-features = false, features = ["deflate_rust"] }
sha2 = "0.10.8"